test/errors/type/int/tostr-format.yasl

echo mt.lookup(0, .tostr)(16, 1.0)
