test/errors/type/int/tostr-format.yasl.err
TypeError: int.tostr expected arg in position 1 to be of type str, got arg of type float. (line 2)
